fix: Fixed ThreadCommand issue on JDK 17
The server can now correctly accept responses.
The client provides a prompt to enable --add-opens java.base/java.lang=ALL-UNNAMED on JDK 17.